set html and body height

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <body>
         <div id="img_cover_top">
-            &nbsp;
+            <div class="menu">
+                &nbsp;
+            </div>
         </div>
     </body>
 </html>
