add secondary menu

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
                 &nbsp;
             </div>
         </div>
+        <div class="menu">
+            &nbsp;
+        </div>
     </body>
 </html>
