add new feed section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
                 &nbsp;
             </div>
         </div>
-        <div class="menu">
-            &nbsp;
+        <div>
+            <div class="menu">
+                &nbsp;
+            </div>
+            <div id="new_feed">
+                &nbsp;
+            </div>
         </div>
     </body>
 </html>
