add profile picture image box

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             </div>
         </div>
         <div>
-            <div class="menu">
+            <div class="secondary menu">
+                <div class="profile-picture">
+                    &nbsp;
+                </div>
                 &nbsp;
             </div>
             <div id="new_feed">
