search input box on the top cover with align center

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <div id="img_cover_top">
             <div class="menu">
-                &nbsp;
+                <div align="center">
+                    <input type="text" placeholder="search"/>
+                </div>
             </div>
         </div>
         <div>
